# boilerplate-python-poetry

./: README.md  main.py  pyproject.toml
boilerplate_python/application/: settings.py
boilerplate_python/application/interface_adapters/: example_interface.py  logger_interface.py
boilerplate_python/application/services/: user_service.py
boilerplate_python/application/use_cases/: example_use_case.py
boilerplate_python/application/use_cases/example/: example_use_case.py
boilerplate_python/application/use_cases/user/: get_user_by_id_use_case.py
boilerplate_python/domain/: exceptions.py  responses.py  schemas.py  user.py
boilerplate_python/domain/interfaces/: __init__.py  logger_interface.py  user_repository_interface.py  user_service_interface.py
boilerplate_python/infrastructure/fast_api/: dependencies.py  executor.py
boilerplate_python/infrastructure/fast_api/routers/: example_router.py
boilerplate_python/infrastructure/logger/: loguru_logger.py
boilerplate_python/infrastructure/repository/: user_repository_firestore.py
boilerplate_python/infrastructure/services/: example_service.py
boilerplate_python/infrastructure/triggers/: cli.py
tests/application/use_cases/: test_email_use_case.py
tests/domain/: test_schemas.py
tests/infrastructure/logger/: test_logger.py
