[tool.poetry]
name = "boilerplate_python"
version = "1.0.0"
description = "Base structure to Python developments"
authors = ["Ivette leon <ileonf@entel.cl>"]
readme = "README.md"
packages = [{include = "boilerplate_python"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
loguru = "^0.7.0"
pydantic = "^1.10.9"
gunicorn = "^20.1.0"
pyjwt = {extras = ["crypto"], version = "^2.6.0"}
google-cloud-secret-manager = "^2.16.4"
PyJWT = "^2.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.10.0"
nox = "^2022.8.7"
ptpython = "^3.0.22"
mypy = "^1.4.1"
isort = "^5.12.0"
ruff = "^0.0.275"
pre-commit = "^3.3.3"
pytest-cov = "^4.1.0"
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
